# Time-repo

./: AI_SETUP_GUIDE.md  Cargo.toml  FINAL_FIXES_V3.md  FINAL_TIME_FIX_SUMMARY.md  HOW_TO_USE.md  LICENSE  PROJECT_COMPLETE_FINAL.md  PROJECT_STRUCTURE.md  PerformanceModule.cs  PerformanceModule.csproj  QUICK_START.md  QUICK_START_FIXED.md  QUICK_START_V5.md  README.md  REORGANIZATION_SUMMARY.md  TIMER_FIX_README.md  Time-blocking.sln  V3_READY.md  add_dynamic_to_new_tabs.py  advanced_analytics.py  ai_assistant.py  animations.py  api_server.go  apply_styles.py  apply_styles_simple.py  async_notifications.py  build_csharp.py  build_modules.py  cache_manager.py  cloud_sync.py  config.json  config_manager.py  csharp_performance.py  data_manager.py  data_processor.rs  dynamic_elements.py  dynamic_interface.py  enhanced_ui.py  final_dynamic_patch.py  fix_encoding.py  (+21 more)
test/: ALL_FIXES_COMPLETE.md  COMPILATION_SUCCESS.md  CPP_MODULE_SETUP.md  CPP_STATUS_EXPLANATION.md  FINAL_IMPROVEMENTS.md  FINAL_STATUS.md  FINAL_UPDATE_SUMMARY.md  HYBRID_ARCHITECTURE.md  HYBRID_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  PROJECT_COMPLETE.md  README_FINAL.md  README_v4.md  READY_TO_USE.md  SUCCESS_V3.md  TIME_FIX_REPORT.md  VERSION_2_RELEASE.md  demo_improvements.py  demo_showcase.py  demo_tasks.py  examples_v6.py  main.py  modern_widgets.py  performance.cpp  requirements_updated.txt  settings.py  simple_demo.py  styles.py  test_cpp_module.py  test_cpp_simple.py  test_improvements.py  test_localization.py  test_time_fix.py  time_block.py  time_scale.py
time_blocking_data/: schedule_2025-09-26.json
(+10 files in other folders)
