[package]
name = "data_processor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "data_processor"
path = "data_processor.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
